# llm_zoomCAMP_2026

./: .gitignore  01_homework.ipynb  README.md  agents.ipynb  configure_client.ipynb  persistent_rag.ipynb  project.md  pyproject.toml  rag_helper.py
01-agentic-rag/: agents.ipynb  ingest.py  persistent_rag_ingest.ipynb  rag_helper.py  reusable_rag.ipynb
02-vector-search/: pyproject.toml  rag_helper.py  vector_search.ipynb  vector_search_pgvector.ipynb
02-vector-search/llm-zoomcamp-onnx/: onnx_learning.ipynb
02-vector-search/llm_zoomcamp_hw2/: 02_homework.ipynb
03-orchestration/: 03_answer.md
04-evaluation/: 04-homework.ipynb  Evaluation.ipynb  agent-eval.ipynb  data-gen.ipynb  data_gen.ipynb  evaluation_utils.py  llm-judge.ipynb  rag-evals.ipynb  rag_helper.py  search-eval.ipynb  search_eval.ipynb
04-evaluation/04-homework/: hw.ipynb  rag_helper.py
04-evaluation/my_agent/: my_LLM_client.ipynb
05-monitoring/: app.py  assistant.py  dashboard.py  db_init.py  db_query.py  docker-compose.yaml  generate_data.py  judge.py  metrics.py  pyproject.toml  rag_helper.py
05-monitoring/05-homework/: exporter.py  hw5.ipynb  pyproject.toml  rag_helper.py  rag_traced.py  starter.py  traces.db
dlt-workshop/homework/: agent.py  check_tables.py  main.py  pipeline.py  pyproject.toml  token_usage.py
