[project]
name = "llm-zoomcamp-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gitsource>=0.0.5",
    "jupyter>=1.1.1",
    "minsearch>=0.1.0",
    "openai>=2.41.1",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlitesearch>=0.1.0",
    "toyaikit>=0.0.11",
    "tqdm>=4.68.2",
]

# [tool.uv.workspace]
# members = [
#     "02-vector-search",
#     "02-vector-search/llm-zoomcamp-onnx",
# ]
