[project]
name = "llm-zoomcamp-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gitsource>=0.0.5",
    "jupyter>=1.1.1",
    "minsearch>=0.1.0",
    "numpy>=2.4.6",
    "onnxruntime>=1.27.0",
    "openai>=2.41.1",
    "pandas>=3.0.3",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlitesearch>=0.1.0",
    "streamlit>=1.59.2",
    "tokenizers>=0.23.1",
    "toyaikit>=0.0.11",
    "tqdm>=4.68.2",
]

[dependency-groups]
dev = [
    "huggingface-hub>=1.23.0",
    "jupyter>=1.1.1",
]

[tool.uv.workspace]
members = [
    "05-homework",
]

# [tool.uv.workspace]
# members = [
#     "02-vector-search",
#     "02-vector-search/llm-zoomcamp-onnx",
# ]
