[project]
name = "homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dlt[duckdb]>=1.29.0",
    "logfire>=4.37.0",
    "minsearch>=0.1.0",
    "openai>=2.41.1",
    "pydantic-ai>=2.8.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
